@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::CaptchaPNG
 
 {{$NEXT}}
+        - Use Crypt::URandom to provide urand as rand replacement
 
 1.05      2025-06-10 18:39:15-07:00 America/Los_Angeles
         - Tiny POD update
